--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .App-logo {
-  height: 40vmin;
+  position: absolute;
+  top: 9%;
+  height: 1.9vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.wall{
+  position: relative;
+  margin-top: 10%;
+  width: 781px;
+  height: 482px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.btnSet{
+  position: absolute;
+  top: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 387px;
 }
 
-.App-link {
-  color: #61dafb;
+.landBtn{
+  width: 387px;
+  height: 60px;
+  background: #62A1EB;
+  border-radius: 8px;
+  margin-bottom: 26px;
+  font-family: 'Helvetica Neue';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20.5px;
+  line-height: 24px;
+  color: #FFFFFF;
+  border: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.landBtn:hover{
+  cursor: pointer;
 }
