--- a/src/App.css
+++ b/src/App.css
@@ -44,4 +44,10 @@
 
 .landBtn:hover{
   cursor: pointer;
+  background-color: #317AD0;
+}
+
+.landBtn:active{
+  cursor: pointer;
+  background-color: #1A5DAB;
 }
