--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,16 @@
   cursor: pointer;
   background-color: #1A5DAB;
 }
+
+.circleBtn{
+  position: absolute;
+  left: 70px;
+  top: 53px;
+  width: 54px;
+  height: 54px;
+  background: #D9D9D9;
+  color: #2E2E2E;
+  font-size: 22px;
+  border-radius: 50%;
+  border: none;
+}
