--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+  margin: 0;
+  padding: 0;
+}
+
+
 @font-face {
   font-family: 'Helvetica Neue';
   src: local('Helvetica Neue'),
